be - add CRUD Profile Fiture

--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -6,6 +6,7 @@
 
 // // Bootstrap
 // @import 'bootstrap/scss/bootstrap';
+// @import "@sweetalert2/theme-dark/dark.scss";
 
 .col-no {
     width: 5%; /* Sesuaikan dengan kebutuhan */
